--- a/css/styles.css
+++ b/css/styles.css
@@ -33,12 +33,14 @@
 .zone_text
 {
   width: 70%;   
+  height: 300px;
   padding: 8px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
   border: 1px solid gray; 
   border-radius: 13px;
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.585);
+  overflow: auto;
 }
 .formu_box
 {
